--- a/preamble.tex
+++ b/preamble.tex
@@ -74,6 +74,7 @@
       %Poor man's typography
 \newcommand*{\doubleplus}{\mathrel{\drawplusplus {7pt}{0.6pt}{5pt}}}
 \newcommand*{\concat}{\ensuremath{\frown}}
+\newcommand*{\append}{\ensuremath{\doubleplus}}
 \newcommand*{\seqminusl}{\nwspoon}
 \newcommand*{\seqminusr}{\sespoon}
 \newcommand*{\disjoint}{\downspoon}
@@ -108,11 +109,12 @@
 \newcommand*{\maybe}[1]{\mathord{\text{¿}}#1}
 \newcommand*{\optional}[1]{#1\bm{?}}
 
-% Tuples
+% Tuples, sequences, and sets.
 \let\originalleft\left
 \let\originalright\right
-\renewcommand{\left}{\mathopen{}\mathclose\bgroup\originalleft}
-\renewcommand{\right}{\aftergroup\egroup\originalright}
+\renewcommand*{\left}{\mathopen{}\mathclose\bgroup\originalleft}
+\renewcommand*{\right}{\aftergroup\egroup\originalright}
+\newcommand*{\with}{\;\middle\vert\;}
 \newcommand*{\tricolon}{\!\mathrel{\vcenter{\offinterlineskip%
 \hbox{\scalebox{0.5}[0.5]{${\scriptscriptstyle \blacktriangleright}$}}
 \vskip.15ex
@@ -124,18 +126,20 @@
 \newcommand*{\isa}[2]{#1\in #2}
 \newcommand*{\sq}[1]{\left[#1\right]}
 \newcommand*{\seq}[1]{\left\lsem#1\right\rsem}
+\newcommand*{\set}[1]{\left\{\,#1\,\right\}}
+\newcommand*{\build}[2]{#1 \with #2}
 
 % Typical operations.
 \newcommand*{\floor}[1]{\left\lfloor#1\right\rfloor}
 \newcommand*{\ceil}[1]{\left\lceil#1\right\rceil}
-\newcommand*{\len}[1]{\left|#1\right|}
+\newcommand*{\len}[1]{\left\vert#1\right\vert}
 \newcommand*{\fnfrac}[2]{\left\lfloor\nicefrac{#1}{#2}\right\rfloor}
 \newcommand*{\ffrac}[2]{\left\lfloor\frac{#1}{#2}\right\rfloor}
 \newcommand*{\transpose}{{}^\text{T}}
 \newcommand*{\joined}{\wideparen}
-\newcommand*{\ang}[1]{\langle#1\rangle}
+\newcommand*{\ang}[1]{\left\langle#1\right\rangle}
 \newcommand*{\sub}[1]{_{#1}}
-\newcommand*{\subb}[1]{[#1]}
+\newcommand*{\subb}[1]{\left[#1\right]}
 \newcommand*{\cyclic}[1]{{#1}^\circlearrowleft}
 
 % Bits of text
@@ -149,15 +153,60 @@
 \newcommand*{\exc}{\text{ except }}
 
 % Special constants/functions
-\newcommand*{\se}{\mathcal{E}}  % TODO: Make them all take a parameter.
+\newcommand*{\mmrappend}{\mathcal{A}}
+\newcommand*{\octetstobits}{\mathcal{B}}
+\newcommand*{\erasurecode}{\mathcal{C}}
+\newcommand*{\se}{\mathcal{E}}
 \newcommand*{\de}{\mathcal{E}^{-1}}
+\newcommand*{\mmrencode}{\se_M}
+\newcommand*{\fyshuffle}{\mathcal{F}}
 \newcommand*{\blake}{\mathcal{H}}
 \newcommand*{\keccak}{\mathcal{H}_K}
-\newcommand*{\keys}[1]{\mathcal{K}(#1)}
+\newcommand*{\merklejustsubpath}{\mathcal{J}}
+\newcommand*{\keys}{\mathcal{K}}
+\newcommand*{\merklesubtreepage}{\mathcal{L}}
+\newcommand*{\merklizecd}{\mathcal{M}}
+\newcommand*{\merklizewb}{\mathcal{M}_B}
+\newcommand*{\merklizestate}{\mathcal{M}_\sigma}
+\newcommand*{\mmrsuperpeak}{\mathcal{M}_R}
+\newcommand*{\getringroot}{\mathcal{O}}
+\newcommand*{\zeropad}{\mathcal{P}}
+\newcommand*{\seqfromhash}{\mathcal{Q}}
+\newcommand*{\ecrecover}{\mathcal{R}}
+\newcommand*{\signdata}{\mathcal{S}}
 \newcommand*{\wallclock}{\mathcal{T}}
 \newcommand*{\subifnone}{\mathcal{U}}
-\newcommand*{\banderout}[1]{\mathcal{Y}(#1)}
-\newcommand*{\powset}[2][{}]{\wp\left\langle#2\right\rangle_{#1}}
+\newcommand*{\values}{\mathcal{V}}
+\newcommand*{\sext}{\mathcal{X}}
+\newcommand*{\banderout}{\mathcal{Y}}
+\newcommand*{\tosigned}{\mathcal{Z}}
+\newcommand*{\powset}[2][{}]{\wp\ang{#2}_{#1}} % TODO: Make it take a parameter.
+
+% F prefix implies these are "proper" latex functions, not just simple names.
+\newcommand*{\Fmmrappend}[1]{\mmrappend\left(#1\right)}
+\newcommand*{\Ferasurecode}[2][]{\erasurecode_{#1}\left(#2\right)}
+\newcommand*{\Ferasurecodeplex}[2][]{\erasurecode^\#_{#1}\left(#2\right)}
+\newcommand*{\Fmmrencode}[1]{\mmrencode\left(#1\right)}
+\newcommand*{\Ffyshuffle}[1]{\fyshuffle\left(#1\right)}
+\newcommand*{\Fmerklejustsubpath}[2]{\merklejustsubpath_{#1}\left(#2\right)}
+\newcommand*{\Fkeys}[1]{\keys\left(#1\right)}
+\newcommand*{\Fmerklesubtreepage}[2]{\merklesubtreepage_{#1}\left(#2\right)}
+\newcommand*{\Fmerklizecd}[1]{\merklizecd\left(#1\right)}
+\newcommand*{\Fmerklizewb}[1]{\merklizewb\left(#1\right)}
+\newcommand*{\Fmerklizestate}[1]{\merklizestate\left(#1\right)} % TODO: Make it take a parameter.
+\newcommand*{\Fmmrsuperpeak}[1]{\mmrsuperpeak\left(#1\right)}
+\newcommand*{\Fgetringroot}[1]{\getringroot\left(#1\right)}
+\newcommand*{\Fzeropad}[2]{\zeropad_{#1}\left(#2\right)}
+\newcommand*{\Fseqfromhash}[1]{\seqfromhash\left(#1\right)}
+\newcommand*{\Fecrecover}[1]{\ecrecover\left(#1\right)}
+\newcommand*{\Fsigndata}[2]{\signdata_{#1}\left(#2\right)}
+\newcommand*{\Fwallclock}{\wallclock}
+\newcommand*{\Fsubifnone}[1]{\subifnone\left(#1\right)} % TODO: Make it take a parameter.
+\newcommand*{\Fvalues}[1]{\values\left(#1\right)}
+\newcommand*{\Fsignext}[2]{\signext_{#1}\left(#2\right)}
+\newcommand*{\Fbanderout}[1]{\banderout\left(#1\right)}
+\newcommand*{\Ftosigned}[2]{\tosigned_{#1}\left(#2\right)}
+\newcommand*{\Ffromsigned}[2]{\fromsigned^{-1}_{#1}\left(#2\right)}
 
 % Constants
 \newcommand*{\corecount}{\mathsf{C}}
@@ -165,31 +214,55 @@
 \newcommand*{\ticketentries}{\mathsf{N}}
 \newcommand*{\valcount}{\mathsf{V}}
 
+% Big Functions
+\newcommand*{\histlookup}{\Lambda}
+
+% Primitive types
+\newcommand*{\serviceaccount}{\mathbb{A}}
+\newcommand*{\bitstring}{\mathbb{B}}
+\newcommand*{\safroleticket}{\mathbb{C}}
+\newcommand*{\dictionary}{\mathbb{D}}
+\newcommand*{\dict}[2]{\dictionary\ang{#1\to#2}}
+\newcommand*{\signature}{\mathbb{E}}
+\newcommand*{\sig}[2]{\signature_{#1}\ang{#2}}
+\newcommand*{\bssignature}{\mathbb{F}}
+\newcommand*{\bsringproof}{\bar{\mathbb{F}}}
+\newcommand*{\bandersnatch}[3]{\bsringproof_{#1}^{#3}\ang{#2}}
+\newcommand*{\bandersig}[3]{\bssignature_{#1}^{#3}\ang{#2}}
+\newcommand*{\segment}{\mathbb{G}}
+\renewcommand*{\hash}{\mathbb{H}}
+\newcommand*{\workitem}{\mathbb{I}}
+\newcommand*{\workerror}{\mathbb{J}}
+\newcommand*{\valkey}{\mathbb{K}}
+\newcommand*{\workdigest}{\mathbb{L}}
+\newcommand*{\ram}{\mathbb{M}}
+\newcommand*{\N}{\mathbb{N}}
+\newcommand*{\operandtuple}{\mathbb{O}}
+\newcommand*{\workpackage}{\mathbb{P}}
+% Q unused
+% R unused
+\newcommand*{\avspec}{\mathbb{S}}
+\newcommand*{\defxfer}{\mathbb{T}}
+\newcommand*{\defxfers}{\seq\defxfer}
+\newcommand*{\partialstate}{\mathbb{U}}
+\newcommand*{\readable}[1]{\mathbb{V}_{#1}}
+\newcommand*{\writable}[1]{\mathbb{V}^*_{#1}}
+\newcommand*{\workreport}{\mathbb{W}}
+\newcommand*{\blob}{\mathbb{Y}}
+\newcommand*{\Z}{\mathbb{Z}}
+
 % Numeric
 \newcommand*{\timeslot}{\N_T}
 \newcommand*{\balance}{\N_B}
+\newcommand*{\serviceid}{\N_S}
+\newcommand*{\bloblength}{\N_L}
 \newcommand*{\gas}{\N_G}
+\newcommand*{\signedgas}{\Z_G}
 \newcommand*{\coreindex}{\N_\corecount}
 \newcommand*{\valindex}{\N_\valcount}
 \newcommand*{\ticketentryindex}{\N_\ticketentries}
 \newcommand*{\epochindex}{\N_\epochlen}
-
-% Functions
-\newcommand*{\histlookup}{\Lambda}
-
-% Primitive types
-\newcommand*{\dict}[2]{\mathbb{D}\langle #1\to#2\rangle}
-\newcommand*{\sig}[2]{\mathbb{E}_{#1}\langle#2\rangle}
-\newcommand*{\bandersnatch}[3]{\bar{\mathbb{F}}_{#1}^{#3}\langle#2\rangle}
-\newcommand*{\bandersig}[3]{\mathbb{F}_{#1}^{#3}\langle#2\rangle}
-\renewcommand*{\hash}{\mathbb{H}}
-\newcommand*{\N}{\mathbb{N}}
-\newcommand*{\G}{\mathbb{G}}
-\newcommand*{\defxfer}{\mathbb{T}}
-\newcommand*{\defxfers}{\seq\defxfer}
-\newcommand*{\partialstate}{\mathbb{U}}
-\newcommand*{\blob}{\mathbb{Y}}
-\newcommand*{\Z}{\mathbb{Z}}
+\newcommand*{\Nbits}[1]{\N_{2^{#1}}}
 
 % The hash & blob types have a bunch of peripheral definitions.
 \newcommand*{\zerohash}{\hash_0}
@@ -215,11 +288,11 @@
 \newcommand*{\¬importcount}{i}
 
 % TODO make this local.
-\newcommand*{\safroleticket}{\mathbb{C}}
+%\newcommand*{\safroleticket}{\mathbb{C}}
 \newcommand*{\st¬id}{y}
 \newcommand*{\st¬entry}{r}
 
-\newcommand*{\workpackage}{\mathbb{P}}
+%\newcommand*{\workpackage}{\mathbb{P}}
 \newcommand*{\wp¬authtoken}{\mathbf{j}}
 \newcommand*{\wp¬authcodehost}{h}
 \newcommand*{\wp¬authcodehash}{u}
@@ -231,7 +304,7 @@
 \newcommand*{\wp¬authcode}{\mathbf{c}}
 \newcommand*{\wp¬metadata}{\mathbf{m}}
 
-\newcommand*{\workitem}{\mathbb{I}}
+%\newcommand*{\workitem}{\mathbb{I}}
 \newcommand*{\wi¬service}{\¬service}
 \newcommand*{\wi¬codehash}{\¬codehash}
 \newcommand*{\wi¬payload}{\¬payload}
@@ -241,7 +314,7 @@
 \newcommand*{\wi¬importsegments}{\mathbf{i}}
 \newcommand*{\wi¬extrinsics}{\mathbf{x}}
 
-\newcommand*{\workreport}{\mathbb{W}}
+%\newcommand*{\workreport}{\mathbb{W}}
 \newcommand*{\wr¬avspec}{s} % O/L ¬service TODO: make bold
 \newcommand*{\wr¬context}{x} % TODO: Make bold like package. Consider renaming to \mathbf{c}
 \newcommand*{\wr¬core}{\¬core}
@@ -258,7 +331,7 @@
 % d: work output data (digest)
 % y: work payload
 
-\newcommand*{\workdigest}{\mathbb{L}}
+%\newcommand*{\workdigest}{\mathbb{L}}
 \newcommand*{\wl¬service}{\¬service}
 \newcommand*{\wl¬codehash}{\¬codehash}
 \newcommand*{\wl¬payloadhash}{\¬payloadhash}
@@ -270,7 +343,7 @@
 \newcommand*{\wl¬xtsize}{z}
 \newcommand*{\wl¬exportcount}{\¬exportcount}
 
-\newcommand*{\operandtuple}{\mathbb{O}}
+%\newcommand*{\operandtuple}{\mathbb{O}}
 \newcommand*{\ot¬packagehash}{h} % O/L ¬codehash TODO: RENAME to k
 \newcommand*{\ot¬segroot}{e} % O/L ¬exportcount TODO: RENAME to r?
 \newcommand*{\ot¬authorizer}{\¬authorizer}
@@ -279,14 +352,14 @@
 \newcommand*{\ot¬gaslimit}{\¬gaslimit}
 \newcommand*{\ot¬result}{\¬result}
 
-\newcommand*{\avspec}{\mathbb{S}}
+%\newcommand*{\avspec}{\mathbb{S}}
 \newcommand*{\as¬packagehash}{h}
 \newcommand*{\as¬bundlelen}{l}
 \newcommand*{\as¬erasureroot}{u}
 \newcommand*{\as¬segroot}{r} % Inconsistent with other segroot. TODO: RENAME to e?
 \newcommand*{\as¬segcount}{n}
 
-\newcommand*{\serviceaccount}{\mathbb{A}}
+%\newcommand*{\serviceaccount}{\mathbb{A}}
 \newcommand*{\sa¬storage}{\mathbf{s}}
 \newcommand*{\sa¬preimages}{\mathbf{p}}
 \newcommand*{\sa¬requests}{\mathbf{l}}
@@ -302,9 +375,11 @@
 \newcommand*{\sa¬items}{i}
 \newcommand*{\sa¬octets}{o}
 \newcommand*{\sa¬minbalance}{f}
+\newcommand*{\sa¬metadata}{\mathbf{m}}
+\newcommand*{\sa¬code}{\mathbf{c}}
 
 % Derived fields of validator keys.
-\newcommand*{\valkey}{\mathbb{K}}
+%\newcommand*{\valkey}{\mathbb{K}}
 \newcommand*{\vk¬bs}{b}
 \newcommand*{\vk¬ed}{e}
 \newcommand*{\vk¬bls}{BLS}
@@ -315,6 +390,12 @@
 \newcommand*{\block}{\mathbf{B}}
 \newcommand*{\theblock}{\block}
 \newcommand*{\B}{\theblock}
+
+\newcommand*{\ancestors}{\mathbf{A}}
+\newcommand*{\theancestors}{\ancestors}
+
+\newcommand*{\reporters}{\mathbf{R}}
+\newcommand*{\isticketed}{\mathbf{T}}
 
 % Extrinsics.
 \newcommand*{\extrinsic}{\mathbf{E}}
@@ -354,7 +435,6 @@
 
 \newcommand*{\thestate}{\sigma}
 \newcommand*{\genesisstate}{\sigma^0}
-\newcommand*{\merklizestate}{\mathcal{M}_\sigma}
 
 \newcommand*{\entropy}{\eta}
 \newcommand*{\entropyaccumulator}{\eta_0}
@@ -365,12 +445,15 @@
 \newcommand*{\assigners}{\privileges_\mathbf{a}}
 \newcommand*{\alwaysaccers}{\privileges_\mathbf{g}}
 
+
 \newcommand*{\accumulated}{\xi}
 \newcommand*{\ready}{\vartheta}
 \newcommand*{\lastaccout}{\theta}
 \newcommand*{\authpool}{\alpha}
-\newcommand*{\recenthistory}{\beta_H}
-\newcommand*{\beefybelt}{\beta_B}
+\newcommand*{\authqueue}{\varphi}
+\newcommand*{\recent}{\beta}
+\newcommand*{\recenthistory}{\recent_H}
+\newcommand*{\beefybelt}{\recent_B}
 
 \newcommand*{\disputes}{\psi}
 \newcommand*{\goodset}{\disputes_\mathbf{g}}
@@ -397,6 +480,18 @@
 \newcommand*{\accountspostxfer}{\accounts^\ddagger}
 \newcommand*{\accountspostpreimage}{\accounts'}
 \newcommand*{\accountspost}{\accounts'}
+
+\newcommand*{\reports}{\rho}
+\newcommand*{\reportspre}{\reports}
+\newcommand*{\reportspostjudgement}{\reports^\dagger}
+\newcommand*{\reportspostguarantees}{\reports^\ddagger}
+\newcommand*{\reportspostassurances}{\reports'}
+
+\newcommand*{\activity}{\pi}
+\newcommand*{\valstatsaccumulator}{\activity_V}
+\newcommand*{\valstatsprevious}{\activity_L}
+\newcommand*{\corestats}{\activity_C}
+\newcommand*{\servicestats}{\activity_S}
 
 % PVM stuff
 \newcommand*{\gascounter}{\varrho}
