--- a/text/recent_history.tex
+++ b/text/recent_history.tex
@@ -2,7 +2,7 @@
 
 We retain in state information on the most recent $\mathsf{H}$ blocks. This is used to preclude the possibility of duplicate or out of date work-reports from being submitted.
 \begin{align}
-  \beta &\in (\recenthistory, \beefybelt) \label{eq:recenthistory} \\
+  \recent &\in (\recenthistory, \beefybelt) \label{eq:recenthistory} \\
   \recenthistory &\in \seq{\tuple{
     \isa{h}{\hash},
     \isa{b}{\hash},
@@ -10,7 +10,7 @@ We retain in state information on the most recent $\mathsf{H}$ blocks. This is u
     \isa{\mathbf{p}}{\dict{\hash}{\hash}}
   }}_{:\mathsf{H}}\\
   \beefybelt &\in \seq{\optional{\hash}} \\
-  \lastaccout &\in \seq{\tup{\N_S, \hash}}
+  \lastaccout &\in \seq{\tup{\serviceid, \hash}}
 \end{align}
 
 For each recent block, we retain its header hash, its state root, its accumulation-result \textsc{mmb} and the corresponding work-package hashes of each item reported (which is no more than the total number of cores, $\corecount = 341$).
@@ -20,20 +20,20 @@ During the accumulation stage, a value with the partial transition of this state
   \recenthistory^\dagger \equiv \recenthistory\quad\exc\quad\recenthistory^\dagger[\len{\recenthistory} - 1]_s = \H_\¬priorstateroot
 \end{equation}
 
-We define the new Accumulation Output Log $\beefybelt$. This is formed from the block's accumulation-output sequence $\lastaccout'$ (defined in section \ref{sec:accumulation}), taking its root using the basic binary Merklization function ($\mathcal{M}_B$, defined in appendix \ref{sec:merklization}) and appending it to the previous log value with the \textsc{mmb} append function ($\mathcal{A}$, defined in appendix \ref{sec:mmr}). Throughout, the Keccak hash function is used to maximize compatibility with legacy systems:
+We define the new Accumulation Output Log $\beefybelt$. This is formed from the block's accumulation-output sequence $\lastaccout'$ (defined in section \ref{sec:accumulation}), taking its root using the basic binary Merklization function ($\merklizewb$, defined in appendix \ref{sec:merklization}) and appending it to the previous log value with the \textsc{mmb} append function (defined in appendix \ref{sec:mmr}). Throughout, the Keccak hash function is used to maximize compatibility with legacy systems:
 \begin{align}
-  \using \mathbf{s} &= \sq{\se_4(s) \frown \se(h) \mid \tup{s, h} \orderedin \lastaccout'}\\
+  \using \mathbf{s} &= \sq{\se_4(s) \concat \se(h) \mid \tup{s, h} \orderedin \lastaccout'}\\
   \label{eq:buildbeefymap}
-  \beefybelt' &\equiv \mathcal{A}(\beefybelt, \mathcal{M}_B(\mathbf{s}, \keccak), \keccak)
+  \beefybelt' &\equiv \Fmmrappend{\beefybelt, \merklizewb{\mathbf{s}, \keccak}, \keccak}
 \end{align}
 
 The final state transition for $\recenthistory$ appends a new item including the new block's header hash, a Merkle commitment to the block's Accumulation Output Log and the set of work-reports made into it (for which we use the guarantees extrinsic, $\xtguarantees$). Formally:
 \begin{equation}
   \begin{aligned}
-    \recenthistory' &\equiv {\overleftarrow{\recenthistory^\dagger \doubleplus \tup{
+    \recenthistory' &\equiv {\overleftarrow{\recenthistory^\dagger \append \tup{
       \mathbf{p},
       \is{h}{\blake(\theheader)},
-      \is{b}{\mathcal{M}_R(\beefybelt')},
+      \is{b}{\mmrsuperpeak(\beefybelt')},
       \is{s}{\zerohash}
       }}}^\mathsf{H} \\
     \where \mathbf{p} &= \{ ((g_\xg¬workreport)_\wr¬avspec)_\as¬packagehash \mapsto ((g_\xg¬workreport)_\wr¬avspec)_\as¬segroot \mid g \in \xtguarantees \}
