--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -7,7 +7,7 @@
 
 \section{Accumulation}\label{sec:accumulation}
 
-Accumulation may be defined as some function whose arguments are $\mathbf{W}$ and $\accounts$ together with selected portions of (at times partially transitioned) state and which yields the posterior service state $\accountspostpreimage$ together with additional state elements $\stagingset'$, $\varphi'$ and $\privileges'$.
+Accumulation may be defined as some function whose arguments are $\mathbf{W}$ and $\accounts$ together with selected portions of (at times partially transitioned) state and which yields the posterior service state $\accountspostpreimage$ together with additional state elements $\stagingset'$, $\authqueue'$ and $\privileges'$.
 
 The proposition of accumulation is in fact quite simple: we merely wish to execute the \emph{Accumulate} logic of the service code of each of the services which has at least one work-digest, passing to it relevant data from said digests together with useful contextual information. However, there are three main complications. Firstly, we must define the execution environment of this logic and in particular the host functions available to it. Secondly, we must define the amount of gas to be allowed for each service's execution. Finally, we must determine the nature of transfers within Accumulate which, as we will see, leads to the need for a second entry-point, \emph{on-transfer}.
 
@@ -21,13 +21,13 @@ The proposition of accumulation is in fact quite simple: we merely wish to execu
 
 Accumulation of a work-package/work-report is deferred in the case that it has a not-yet-fulfilled dependency and is cancelled entirely in the case of an invalid dependency. Dependencies are specified as work-package hashes and in order to know which work-packages have been accumulated already, we maintain a history of what has been accumulated. This history, $\accumulated$, is sufficiently large for an epoch worth of work-reports. Formally:
 \begin{align}
-  \accumulated &\in \seq{\{\hash\}}_\mathsf{E} \\
+  \accumulated &\in \seq{\{\hash\}}_\epochlen \\
   \accumulatedcup &\equiv \bigcup_{x \in \accumulated}(x)
 \end{align}
 
 We also maintain knowledge of ready (\ie available and/or audited) but not-yet-accumulated work-reports in the state item $\ready$. Each of these were made available at most one epoch ago but have or had unfulfilled dependencies. Alongside the work-report itself, we retain its unaccumulated dependencies, a set of work-package hashes. Formally:
 \begin{align}
-  \ready &\in \seq{\seq{(\workreport, \{\hash\})}}_\mathsf{E}
+  \ready &\in \seq{\seq{(\workreport, \{\hash\})}}_\epochlen
 \end{align}
 
 The newly available work-reports, $\mathbf{W}$, are partitioned into two sequences based on the condition of having zero prerequisite work-reports. Those meeting the condition, $\mathbf{W}^!$, are accumulated immediately. Those not, $\mathbf{W}^Q$, are for queued execution. Formally:
@@ -38,7 +38,7 @@ The newly available work-reports, $\mathbf{W}$, are partitioned into two sequenc
     w \orderedin \mathbf{W},
     |(w_x)_\mathbf{p}| > 0 \vee w_\wr¬srlookup \ne \{\}
   }, \accumulatedcup)\!\!\!\!\\
-  D(w) &\equiv (w, \{(w_x)_\mathbf{p}\} \cup \keys{w_\wr¬srlookup})
+  D(w) &\equiv (w, \{(w_x)_\mathbf{p}\} \cup \Fkeys{w_\wr¬srlookup})
 \end{align}
 
 We define the queue-editing function $E$, which is essentially a mutator function for items such as those of $\ready$, parameterized by sets of now-accumulated work-package hashes (those in $\accumulated$). It is used to update queues of work-reports when some of them are accumulated. Functionally, it removes all entries whose work-report's hash is in the set provided as a parameter, and removes any dependencies which appear in said set. Formally:
@@ -62,7 +62,7 @@ We further define the accumulation priority queue function $Q$, which provides t
     &\seq{(\workreport, \{\hash\})} \to \seq{\workreport} \\
     &\mathbf{r} \mapsto \begin{cases}
       [] &\when \mathbf{g} = [] \\
-      \mathbf{g} \frown Q(E(\mathbf{r}, \srmap(\mathbf{g})))\!\!\!\! &\otherwise \\
+      \mathbf{g} \concat Q(E(\mathbf{r}, \srmap(\mathbf{g})))\!\!\!\! &\otherwise \\
       \multicolumn{2}{l}{\,\where \mathbf{g} = [w \mid (w, \{\}) \orderedin \mathbf{r}]}
     \end{cases}
   \end{aligned}\right.
@@ -78,8 +78,8 @@ Finally, we define the mapping function $\srmap$ which extracts the correspondin
 
 We may now define the sequence of accumulatable work-reports in this block as $\mathbf{W}^*$:
 \begin{align}
-  \using m &= \H_\¬timeslot \bmod \mathsf{E}\\
-  \mathbf{W}^* &\equiv \mathbf{W}^! \frown Q(\mathbf{q}) \\
+  \using m &= \H_\¬timeslot \bmod \epochlen\\
+  \mathbf{W}^* &\equiv \mathbf{W}^! \concat Q(\mathbf{q}) \\
   \quad\where \mathbf{q} &= E(\wideparen{\ready_{m\dots}} \concat \wideparen{\ready_{\dots m}} \concat \mathbf{W}^Q, \srmap(\mathbf{W}^!))
 \end{align}
 
@@ -95,25 +95,25 @@ We resolve this by defining a function $\Delta_+$ which accumulates work-reports
 
 Only once all such accumulation is executed do we integrate the results and thus define the relevant posterior state items. In doing so we also integrate the consequences of any \emph{deferred-transfers} implied by accumulation.
 
-Our formalisms begin by defining $\partialstate$ as a characterization of (\ie values capable of representing) state components which are both needed and mutable by the accumulation process. This comprises the service accounts state (as in $\accountspre$), the upcoming validator keys $\stagingset$, the queue of authorizers $\varphi$ and the privileges state $\privileges$. Formally:
+Our formalisms begin by defining $\partialstate$ as a characterization of (\ie values capable of representing) state components which are both needed and mutable by the accumulation process. This comprises the service accounts state (as in $\accountspre$), the upcoming validator keys $\stagingset$, the queue of authorizers $\authqueue$ and the privileges state $\privileges$. Formally:
 \begin{equation}
   \label{eq:partialstate}
   \partialstate \equiv \left(\begin{aligned}
-    &\isa{\mathbf{d}}{\dict{\N_S}{\serviceaccount}} \,,\;
+    &\isa{\mathbf{d}}{\dict{\serviceid}{\serviceaccount}} \,,\;
     \isa{\mathbf{i}}{\seq{\valkey}_\valcount} \,,\;
     \isa{\mathbf{q}}{\seq{\seq{\hash}_\mathsf{Q}}_\corecount} \,,\\
-    &\isa{m}{\N_S} \,,\;
-    \isa{\mathbf{a}}{\seq{\N_S}_\corecount} \,,\;
-    \isa{v}{\N_S} \,,\;
-    \isa{\mathbf{z}}{\dict{\N_S}{\gas}}
+    &\isa{m}{\serviceid} \,,\;
+    \isa{\mathbf{a}}{\seq{\serviceid}_\corecount} \,,\;
+    \isa{v}{\serviceid} \,,\;
+    \isa{\mathbf{z}}{\dict{\serviceid}{\gas}}
   \end{aligned}\right)
 \end{equation}
 
 We denote the set characterizing a \emph{deferred transfer} as $\defxfer$, noting that a transfer includes a memo component $m$ of $\mathsf{W}_T = 128$ octets, together with the service index of the sender $s$, the service index of the receiver $d$, the balance to be transferred $a$ and the gas limit $g$ for the transfer. Formally:
 \begin{align}
   \defxfer \equiv \tuple{
-    \isa{s}{\N_S} ,
-    \isa{d}{\N_S} ,
+    \isa{s}{\serviceid} ,
+    \isa{d}{\serviceid} ,
     \isa{a}{\balance} ,
     \isa{m}{\blob_{\mathsf{W}_T}} ,
     \isa{g}{\gas}
@@ -122,13 +122,13 @@ We denote the set characterizing a \emph{deferred transfer} as $\defxfer$, notin
 
 Finally, we denote the set of service/hash pairs, utilized as a service-indexed commitment to the accumulation output, as $\servouts$:
 \begin{equation}
-  \servouts \equiv \{(\N_S, \hash)\} \qquad \gasused \equiv \seq{\tup{\N_S, \gas}}
+  \servouts \equiv \{(\serviceid, \hash)\} \qquad \gasused \equiv \seq{\tup{\serviceid, \gas}}
 \end{equation}
 
 We define the outer accumulation function $\Delta_+$ which transforms a gas-limit, a sequence of work-reports, an initial partial-state and a dictionary of services enjoying free accumulation, into a tuple of the number of work-results accumulated, a posterior state-context, the resultant deferred-transfers and accumulation-output pairings:
 \begin{equation}
   \Delta_+\colon\left\{\begin{aligned}
-    &(\gas, \seq{\workreport}, \partialstate, \dict{\N_S}{\gas}) \to (\N, \partialstate, \defxfers, \servouts, \gasused) \\
+    &(\gas, \seq{\workreport}, \partialstate, \dict{\serviceid}{\gas}) \to (\N, \partialstate, \defxfers, \servouts, \gasused) \\
     &(g, \mathbf{w}, \mathbf{o}, \mathbf{f}) \!\mapsto\! \begin{cases}
       (0, \mathbf{o}, [], \{\}, []) &
         \when i = 0 \\
@@ -144,11 +144,11 @@ We define the outer accumulation function $\Delta_+$ which transforms a gas-limi
 We come to define the parallelized accumulation function $\Delta_*$ which, with the help of the single-service accumulation function $\Delta_1$, transforms an initial state-context, together with a sequence of work-reports and a dictionary of privileged always-accumulate services, into a tuple of the total gas utilized in \textsc{pvm} execution $u$, a posterior state-context $(\mathbf{d}', \mathbf{i}', \mathbf{q}', m', \mathbf{a}', v', \mathbf{x}')$ and the resultant accumulation-output pairings $\mathbf{b}$ and deferred-transfers $\wideparen{\mathbf{t}}$:
 \begin{equation}
   \Delta_*\colon\left\{\;\begin{aligned}
-    &(\partialstate, \seq{\workreport}, \dict{\N_S}{\gas}) \to (\partialstate, \defxfers, \servouts, \gasused) \\
+    &(\partialstate, \seq{\workreport}, \dict{\serviceid}{\gas}) \to (\partialstate, \defxfers, \servouts, \gasused) \\
     &(\mathbf{o}, \mathbf{w}, \mathbf{f}) \mapsto ((\mathbf{d}', \mathbf{i}', \mathbf{q}', m', \mathbf{a}', v', \mathbf{z}'), \wideparen{\mathbf{t}}, \mathbf{b}, \mathbf{u})\!\!\!\!\!\!\\
     &\text{where:}\\
     &\ \begin{aligned}
-      \mathbf{s} &= \{ \mathbf{r}_s \mid w \in \mathbf{w}, \mathbf{r} \in w_\mathbf{r} \} \cup \keys{\mathbf{f}} \\
+      \mathbf{s} &= \{ \mathbf{r}_s \mid w \in \mathbf{w}, \mathbf{r} \in w_\mathbf{r} \} \cup \Fkeys{\mathbf{f}} \\
       \mathbf{u} &= [(s, \Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_u) \mid s \orderedin \mathbf{s}] \\
       \mathbf{b} &= \{ (s, b) \mid s \in \mathbf{s},\, b = \Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_b,\, b \ne \none \} \\
       \mathbf{t} &= [\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\mathbf{t} \mid s \orderedin \mathbf{s}] \\
@@ -159,8 +159,8 @@ We come to define the parallelized accumulation function $\Delta_*$ which, with 
       v' &= (\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, v^*)_\mathbf{o})_v \\
       \mathbf{i}' &= (\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, v)_\mathbf{o})_\mathbf{i} \\
       \forall c \in \coreindex : \mathbf{q}'_c &= (\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, \mathbf{a}_c)_\mathbf{o})_\mathbf{q} \\
-      \mathbf{n} &= \bigcup_{s \in \mathbf{s}}(\{ (\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\mathbf{o})_\mathbf{d} \setminus \keys{\mathbf{d} \setminus \{s\}} \}) \\
-      \mathbf{m} &= \bigcup_{s \in \mathbf{s}}(\keys{\mathbf{d}} \setminus \keys{(\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\mathbf{o})_\mathbf{d}})
+      \mathbf{n} &= \bigcup_{s \in \mathbf{s}}(\{ (\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\mathbf{o})_\mathbf{d} \setminus \Fkeys{\mathbf{d} \setminus \{s\}} \}) \\
+      \mathbf{m} &= \bigcup_{s \in \mathbf{s}}(\Fkeys{\mathbf{d}} \setminus \Fkeys{(\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\mathbf{o})_\mathbf{d}})
     \end{aligned}
   \end{aligned}\right.
 \end{equation}
@@ -168,16 +168,16 @@ We come to define the parallelized accumulation function $\Delta_*$ which, with 
 And $\fnprovide$ is the preimage integration function, which transforms a dictionary of service states and a set of service/hash pairs into a new dictionary of service states. Preimage provisions into services which no longer exist or whose relevant request is dropped are disregarded:
 \begin{equation}
   \fnprovide\colon\left\{\begin{aligned}
-    &(\dict{\N_S}{\serviceaccount}, \{\tup{\N_S, \blob}\}) \to \dict{\N_S}{\serviceaccount} \\
+    &(\dict{\serviceid}{\serviceaccount}, \{\tup{\serviceid, \blob}\}) \to \dict{\serviceid}{\serviceaccount} \\
     &(\mathbf{d}, \mathbf{p}) \mapsto \mathbf{d}'\;\where \mathbf{d}' = \mathbf{d}\;\text{except:} \\
     &\quad\forall \tup{s, \mathbf{i}} \in \mathbf{p},\;
-      s \in \keys{\mathbf{d}},\;
+      s \in \Fkeys{\mathbf{d}},\;
       \mathbf{d}[s]_\mathbf{l}[\blake(\mathbf{i}), \len{\mathbf{i}}] = \sq{}:\\
     &\qquad \mathbf{d}'[s]_\mathbf{l}[\blake(\mathbf{i}), \len{\mathbf{i}}] = [\thetime']\\
     &\qquad \mathbf{d}'[s]_\mathbf{p}[\blake(\mathbf{i})] = \mathbf{i}
     %\begin{aligned}
     %  \tup{s, \mathbf{i}} \in \mathbf{p} \wedge
-    %  s \in \keys{\mathbf{d}}\;\wedge& \\
+    %  s \in \Fkeys{\mathbf{d}}\;\wedge& \\
     %  \mathbf{d}[s]_\mathbf{l}[\blake(\mathbf{i}), \len{\mathbf{i}}] = \sq{}&
     %\end{aligned} &\Rightarrow
     %\begin{aligned}
@@ -187,7 +187,7 @@ And $\fnprovide$ is the preimage integration function, which transforms a dictio
   \end{aligned}\right.
 \end{equation}
 
-We note that while forming the union of all altered, newly added service and newly removed indices, defined in the above context as $\keys{\mathbf{n}} \cup \mathbf{m}$, different services may not each contribute the same index for a new, altered or removed service. This cannot happen for the set of removed and altered services since the code hash of removable services has no known preimage and thus cannot execute itself to make an alteration. For new services this should also never happen since new indices are explicitly selected to avoid such conflicts. In the unlikely event it does happen, the block must be considered invalid.
+We note that while forming the union of all altered, newly added service and newly removed indices, defined in the above context as $\Fkeys{\mathbf{n}} \cup \mathbf{m}$, different services may not each contribute the same index for a new, altered or removed service. This cannot happen for the set of removed and altered services since the code hash of removable services has no known preimage and thus cannot execute itself to make an alteration. For new services this should also never happen since new indices are explicitly selected to avoid such conflicts. In the unlikely event it does happen, the block must be considered invalid.
 
 The single-service accumulation function, $\Delta_1$, transforms an initial state-context, sequence of work-reports and a service index into an alterations state-context, a sequence of \emph{transfers}, a possible accumulation-output and the actual \textsc{pvm} gas used. This function wrangles the work-items of a particular service from a set of work-reports and invokes \textsc{pvm} execution with said data:
 \begin{equation}
@@ -197,7 +197,7 @@ The single-service accumulation function, $\Delta_1$, transforms an initial stat
     \isa{\ot¬authorizer}{\hash},
     \isa{\ot¬payloadhash}{\hash},
     \isa{\ot¬gaslimit}{\gas},
-    \isa{\ot¬result}{\blob \cup \mathbb{J}},
+    \isa{\ot¬result}{\blob \cup \workerror},
     \isa{\ot¬authtrace}{\blob}
   }
 \end{equation}
@@ -206,7 +206,7 @@ The single-service accumulation function, $\Delta_1$, transforms an initial stat
     &\begin{aligned}
       \tup{\begin{aligned}
         &\partialstate, \seq{\workreport},\\
-        &\dict{\N_S}{\gas}, \N_S
+        &\dict{\serviceid}{\gas}, \serviceid
       \end{aligned}}
       &\to \tup{
         \begin{alignedat}{3}
@@ -214,7 +214,7 @@ The single-service accumulation function, $\Delta_1$, transforms an initial stat
           \isa{&\mathbf{t}&}{\defxfers}\,,\;
           \isa{b}{\optional{\hash}}\,,\\
           \isa{u&}{\gas}\,,\;
-          \isa{&\mathbf{p}&}{\{\tup{\N_S, \blob}\}}
+          \isa{&\mathbf{p}&}{\{\tup{\serviceid, \blob}\}}
         \end{alignedat}
       } \\
       (\mathbf{o}, \mathbf{w}, \mathbf{f}, s) &\mapsto \Psi_A(\mathbf{o}, \thetime', s, g, \mathbf{i})
@@ -249,20 +249,20 @@ This introduces $\operandtuple$, the set of wrangled \emph{operand tuples}, used
 
 \newcommand*{\accoutseq}{\mathbf{c}}
 
-Given the result of the top-level $\Delta_+$, we may define the posterior state $\privileges'$, $\varphi'$ and $\stagingset'$ as well as the first intermediate state of the service-accounts $\accountspostacc$ and the Accumulation Output Log $\lastaccout'$:
+Given the result of the top-level $\Delta_+$, we may define the posterior state $\privileges'$, $\authqueue'$ and $\stagingset'$ as well as the first intermediate state of the service-accounts $\accountspostacc$ and the Accumulation Output Log $\lastaccout'$:
 \begin{align}
-  \using &g = \max\left(\mathsf{G}_T, \mathsf{G}_A\cdot \corecount + \textstyle \sum_{x \in \mathcal{V}(\alwaysaccers)}(x)\right)\\
-  \also &\mathbf{o} = (\accountspre, \stagingset, \varphi, \manager, \assigners, \delegator, \alwaysaccers) \\
+  \using &g = \max\left(\mathsf{G}_T, \mathsf{G}_A\cdot \corecount + \textstyle \sum_{x \in \Fvalues{\alwaysaccers}}(x)\right)\\
+  \also &\mathbf{o} = (\accountspre, \stagingset, \authqueue, \manager, \assigners, \delegator, \alwaysaccers) \\
   &(n, \mathbf{o}', \mathbf{t}, \lastaccout', \mathbf{u}) \equiv
     \Delta_+(g, \mathbf{W}^*, \mathbf{o}, \alwaysaccers) \\
-  &(\accountspostacc, \stagingset', \varphi', \manager', \assigners', \delegator', \alwaysaccers') \equiv \mathbf{o}'
+  &(\accountspostacc, \stagingset', \authqueue', \manager', \assigners', \delegator', \alwaysaccers') \equiv \mathbf{o}'
 \end{align}
 
 From this formulation, we also receive $\mathbf{t}$, the grand sequence of deferred transfers, together with $n$, the total number of work-items accumulated and $\mathbf{u}$, the gas used in the accumulation process for each service. Each of these terms are used shortly.
 
 We compose $\mathbf{I}$, our accumulation statistics, which is a mapping from the service indices which were accumulated to the amount of gas used throughout accumulation and the number of work-items accumulated. Formally:
 \begin{align}
-  &\mathbf{I} \in \dict{\N_S}{\tuple{\gas, \N}} \\
+  &\mathbf{I} \in \dict{\serviceid}{\tuple{\gas, \N}} \\
   &\textstyle \mathbf{I} \equiv \left\{ s \mapsto \tup{\sum_{(s, u) \in \mathbf{u}}(u), \len{N(s)}} \;\middle\mid\; N(s) \ne [] \right\} \\
   \where &N(s) \equiv \sq{r \mid w \orderedin \mathbf{W}^*_{\dots n} , r \orderedin w_\mathbf{r} , r_s = s }
 \end{align}
@@ -272,8 +272,8 @@ We compose $\mathbf{I}$, our accumulation statistics, which is a mapping from th
 We have denoted the sequence of implied transfers as $\mathbf{t}$, ordered internally according to the source service's execution. We define a selection function $\selectxfers$, which maps a desired destination service index into the sequence of transfers from $\mathbf{t}$ which target said service. It is ordered primarily according to the source service index and secondarily their order within $\mathbf{t}$. Formally:
 \begin{equation}
   \selectxfers\colon \left\{\;\begin{aligned}
-    \N_S &\to \defxfers \\
-    d &\mapsto \left[\,t \mid s \orderedin \N_S,\ t \orderedin \mathbf{t},\ t_s = s,\ t_d = d\,\right]
+    \serviceid &\to \defxfers \\
+    d &\mapsto \left[\,t \mid s \orderedin \serviceid,\ t \orderedin \mathbf{t},\ t_s = s,\ t_d = d\,\right]
   \end{aligned}\right.\!\!\!\!
 \end{equation}
 
@@ -282,7 +282,7 @@ The second intermediate state $\accountspostxfer$ may then be defined with all t
   \mathbf{x} &= \{ s \mapsto \Psi_T(\accountspostacc, \thetime', s, \selectxfers(s)) \mid (s \mapsto a) \in \accountspostacc \} \\
   \accountspostxfer &\equiv \left\{ s \mapsto a' \;\middle\mid\; (s \mapsto \tup{a, u}) \in \mathbf{x} \right\} \\
   &\where a' = \begin{cases}
-    a \exc a'_a = \thetime' &\when s \in \keys{\mathbf{I}} \\
+    a \exc a'_a = \thetime' &\when s \in \Fkeys{\mathbf{I}} \\
     a &\otherwise
   \end{cases}
 \end{align}
@@ -290,7 +290,7 @@ The second intermediate state $\accountspostxfer$ may then be defined with all t
 Furthermore we build the deferred transfers statistics value $\mathbf{X}$ as the number of transfers and the total gas used in transfer processing for each \emph{destination} service index. Formally:
 \begin{align}
   \label{eq:deferredtransfers}
-  &\mathbf{X} \in \dict{\N_S}{\tuple{\N, \gas}} \\
+  &\mathbf{X} \in \dict{\serviceid}{\tuple{\N, \gas}} \\
   &\textstyle \mathbf{X} \equiv \left\{ d \mapsto \tup{\len{\selectxfers(d)}, u} \;\middle\vert\; \begin{aligned}
     \selectxfers(d) &\ne [],\\ \exists a: \mathbf{x}[d] &= (a, u)
   \end{aligned}
@@ -301,12 +301,12 @@ Note that $\Psi_T$ is defined in appendix \ref{sec:ontransferinvocation} such th
 
 We define the final state of the ready queue and the accumulated map by integrating those work-reports which were accumulated in this block and shifting any from the prior state with the oldest such items being dropped entirely:
 \begin{align}
-  \accumulated'_{\mathsf{E} - 1} &= \srmap(\mathbf{W}^*_{\dots n}) \\
+  \accumulated'_{\epochlen - 1} &= \srmap(\mathbf{W}^*_{\dots n}) \\
   \forall i \in \N_\mathsf{E - 1}: \accumulated'_{i} &\equiv \accumulated_{i + 1} \\
-  \forall i \in \N_\mathsf{E} : \ready'^\circlearrowleft_{m - i} &\equiv \begin{cases}
-    E(\mathbf{W}^Q, \accumulated'_{\mathsf{E} - 1}) &\when i = 0 \\
+  \forall i \in \N_\epochlen : \cyclic{\ready'}_{m - i} &\equiv \begin{cases}
+    E(\mathbf{W}^Q, \accumulated'_{\epochlen - 1}) &\when i = 0 \\
     [] &\when 1 \le i < \thetime' - \thetime \\
-    E(\ready^\circlearrowleft_{m - i}, \accumulated'_{\mathsf{E} - 1}) &\when i \ge \thetime' - \thetime
+    E(\cyclic{\ready}_{m - i}, \accumulated'_{\epochlen - 1}) &\when i \ge \thetime' - \thetime
   \end{cases}
 \end{align}
 
@@ -321,7 +321,7 @@ We define the final state of the ready queue and the accumulated map by integrat
 
 After accumulation, we must integrate all preimages provided in the lookup extrinsic to arrive at the posterior account state. The lookup extrinsic is a sequence of pairs of service indices and data. These pairs must be ordered and without duplicates (equation \ref{eq:preimagesareordered} requires this). The data must have been solicited by a service but not yet provided in the \emph{prior} state. Formally:
 \begin{align}
-  \xtpreimages &\in \seq{\tuple{ \N_S,\, \blob }} \\
+  \xtpreimages &\in \seq{\tuple{ \serviceid,\, \blob }} \\
   \label{eq:preimagesareordered}\xtpreimages &= \orderuniqby{i}{i \in \xtpreimages} \\
   Y(\mathbf{d}, s, h, l) &\Leftrightarrow
   h \not\in \mathbf{d}[s]_\mathbf{p} \wedge
