--- a/text/judgments.tex
+++ b/text/judgments.tex
@@ -32,18 +32,18 @@ The disputes extrinsic, $\xtdisputes$, may contain one or more verdicts $\xtverd
 \begin{equation}
   \begin{aligned}
     \xtdisputes &\equiv (\xtverdicts, \xtculprits, \xtfaults) \\
-    \where \xtverdicts &\in \seq{\tup{\hash, \ffrac{\thetime}{\mathsf{E}} - \N_2, \seq{\tup{\{\top, \bot\}, \N_{\valcount}, \mathbb{E}}}_{\floor{\nicefrac{2}{3}\valcount} + 1}}}\\
-    \also \xtculprits &\in \seq{\hash, \edkey, \mathbb{E}} \,,\quad
-    \xtfaults \in \seq{\hash, \{\top,\bot\}, \edkey, \mathbb{E}}
+    \where \xtverdicts &\in \seq{\tup{\hash, \ffrac{\thetime}{\epochlen} - \N_2, \seq{\tup{\{\top, \bot\}, \valindex, \signature}}_{\floor{\nicefrac{2}{3}\valcount} + 1}}}\\
+    \also \xtculprits &\in \seq{\hash, \edkey, \signature} \,,\quad
+    \xtfaults \in \seq{\hash, \{\top,\bot\}, \edkey, \signature}
   \end{aligned}
 \end{equation}
 
 The signatures of all judgments must be valid in terms of one of the two allowed validator key-sets, identified by the verdict's second term which must be either the epoch index of the prior state or one less. Formally:
 \begin{align}
   &\begin{aligned}
-    &\forall (r, a, \mathbf{j}) \in \xtverdicts, \forall (v, i, s) \in \mathbf{j} : s \in \sig{\mathbf{k}[i]_e}{\mathsf{X}_v \concat r}\\
+    &\forall (r, a, \mathbf{j}) \in \xtverdicts, \forall (v, i, s) \in \mathbf{j} : s \in \sig{\mathbf{k}[i]_\vk¬ed}{\mathsf{X}_v \concat r}\\
     &\quad\where \mathbf{k} = \begin{cases}
-      \activeset &\when a = \displaystyle \ffrac{\thetime}{\mathsf{E}}\\
+      \activeset &\when a = \displaystyle \ffrac{\thetime}{\epochlen}\\
       \previousset &\otherwise\\
     \end{cases}
   \end{aligned}\\
@@ -56,7 +56,7 @@ Offender signatures must be similarly valid and reference work-reports with judg
   \begin{aligned}
     &r \in \badset' \,,\\
     &k \in \mathbf{k} \,,\\
-    &s \in \sig{k}{\mathsf{X}_G \frown r}
+    &s \in \sig{k}{\mathsf{X}_G \concat r}
   \end{aligned}\right.\\
   \forall (r, v, k, s) &\in \xtfaults : \bigwedge \left\{ \begin{aligned}
     &r \in \badset' \Leftrightarrow r \not\in \goodset' \Leftrightarrow v \,,\\
@@ -94,9 +94,9 @@ There are some constraints placed on the composition of this extrinsic: any verd
 
 We clear any work-reports which we judged as uncertain or invalid from their core:
 \begin{equation}\label{eq:removenonpositive}
-  \forall c \in \coreindex : \rho^\dagger[c] = \begin{cases}
-    \none &\!\!\!\!\when \{ (\blake(\rho[c]_w), t) \in \verdicts, t < \floor{\nicefrac{2}{3}\valcount} \} \\
-    \rho[c] &\!\!\!\!\otherwise
+  \forall c \in \coreindex : \reportspostjudgement[c] = \begin{cases}
+    \none &\!\!\!\!\when \{ (\blake(\reports[c]_w), t) \in \verdicts, t < \floor{\nicefrac{2}{3}\valcount} \} \\
+    \reports[c] &\!\!\!\!\otherwise
   \end{cases}\!\!\!\!\!\!\!
 \end{equation}
 
@@ -112,5 +112,5 @@ The state's good-set, bad-set and wonky-set assimilate the hashes of the reports
 
 The offenders markers must contain exactly the keys of all new offenders, respectively. Formally:
 \begin{align}
-  \H_\¬offendersmark &\equiv \sq{ k \mid (r, k, s) \in \xtculprits} \frown \sq{ k \mid (r, v, k, s) \in \xtfaults }
+  \H_\¬offendersmark &\equiv \sq{ k \mid (r, k, s) \in \xtculprits} \concat \sq{ k \mid (r, v, k, s) \in \xtfaults }
 \end{align}
