--- a/text/statistics.tex
+++ b/text/statistics.tex
@@ -6,10 +6,10 @@ The \Jam chain does not explicitly issue rewards---we leave this as a job to be 
 
 Such performance information cannot directly cover all aspects of validator activity; whereas block production, guarantor reports and availability assurance can easily be tracked on-chain, \textsc{Grandpa}, \textsc{Beefy} and auditing activity cannot. In the latter case, this is instead tracked with validator voting activity: validators vote on their impression of each other's efforts and a median may be accepted as the truth for any given validator. With an assumption of 50\% honest validators, this gives an adequate means of oraclizing this information.
 
-The validator statistics are made on a per-epoch basis and we retain one record of completed statistics together with one record which serves as an accumulator for the present epoch. Both are tracked in $\pi$, which is thus a sequence of two elements, with the first being the accumulator and the second the previous epoch's statistics. For each epoch we track a performance record for each validator:
+The validator statistics are made on a per-epoch basis and we retain one record of completed statistics together with one record which serves as an accumulator for the present epoch. Both are tracked in $\activity$, which is thus a sequence of two elements, with the first being the accumulator and the second the previous epoch's statistics. For each epoch we track a performance record for each validator:
 \begin{align}
-  \pi &\equiv \tup{\pi_V, \pi_L, \pi_C, \pi_S}\\
-  (\pi_V, \pi_L) &\in \seq{\tuple{
+  \activity &\equiv \tup{\valstatsaccumulator, \valstatsprevious, \corestats, \servicestats}\\
+  (\valstatsaccumulator, \valstatsprevious) &\in \seq{\tuple{
     \isa{b}{\N}\,,
     \isa{t}{\N}\,,
     \isa{p}{\N}\,,
@@ -35,37 +35,37 @@ The six validator statistics we track are:
 
 The objective statistics are updated in line with their description, formally:
 \begin{align}
-    \using e =\; &\ffrac{\thetime}{\mathsf{E}} \ ,\quad e' = \ffrac{\thetime'}{\mathsf{E}}\\
-    \!(\mathbf{a}, \pi'_L) \equiv\;&\begin{cases}
-        (\pi_V, \pi_L) &\when e' = e \\
-        (\sq{\tuple{0, \dots, [0, \dots]}, \dots}, \pi_V)\!\!\!\! &\otherwise
+    \using e =\; &\ffrac{\thetime}{\epochlen} \ ,\quad e' = \ffrac{\thetime'}{\epochlen}\\
+    \!(\mathbf{a}, \valstatsprevious') \equiv\;&\begin{cases}
+        (\valstatsaccumulator, \valstatsprevious) &\when e' = e \\
+        (\sq{\tuple{0, \dots, [0, \dots]}, \dots}, \valstatsaccumulator)\!\!\!\! &\otherwise
     \end{cases}\!\!\!\!\\
     \forall v \in \valindex :&\; \left\{\begin{aligned}
-        \pi'_V[v]_b &\equiv \mathbf{a}[v]_b + (v = \H_\¬authorindex)\\
-        \pi'_V[v]_t &\equiv \mathbf{a}[v]_t + \begin{cases}
+        \valstatsaccumulator'[v]_b &\equiv \mathbf{a}[v]_b + (v = \H_\¬authorindex)\\
+        \valstatsaccumulator'[v]_t &\equiv \mathbf{a}[v]_t + \begin{cases}
             \len{\xttickets} &\when v = \H_\¬authorindex \\
             0 &\otherwise
         \end{cases}\\
-        \pi'_V[v]_p &\equiv \mathbf{a}[v]_p + \begin{cases}
+        \valstatsaccumulator'[v]_p &\equiv \mathbf{a}[v]_p + \begin{cases}
             \len{\xtpreimages} &\when v = \H_\¬authorindex \\
             0 &\otherwise
         \end{cases}\\
-        \pi'_V[v]_d &\equiv \mathbf{a}[v]_d + \begin{cases}
-            \sum_{d \in \xtpreimages}|d| &\when v = \H_\¬authorindex \\
+        \valstatsaccumulator'[v]_d &\equiv \mathbf{a}[v]_d + \begin{cases}
+            \sum_{d \in \xtpreimages}\len{d} &\when v = \H_\¬authorindex \\
             0 &\otherwise
         \end{cases}\\
-        \pi'_V[v]_g &\equiv \mathbf{a}[v]_g + (\activeset'_v \in \mathbf{R})\\
-        \pi'_V[v]_a &\equiv \mathbf{a}[v]_a + (\exists a \in \xtassurances : a_v = v)
+        \valstatsaccumulator'[v]_g &\equiv \mathbf{a}[v]_g + (\activeset'_v \in \reporters)\\
+        \valstatsaccumulator'[v]_a &\equiv \mathbf{a}[v]_a + (\exists a \in \xtassurances : a_v = v)
     \end{aligned}\right.\!\!\!\!\!
 \end{align}
 
-Note that $\mathbf{R}$ is the \emph{Reporters} set, as defined in equation \ref{eq:guarantorsig}.
+Note that $\reporters$ is the \emph{Reporters} set, as defined in equation \ref{eq:guarantorsig}.
 
 \subsection{Cores and Services}
 
 The other two components of statistics are the core and service activity statistics. These are tracked only on a per-block basis unlike the validator statistics which are tracked over the whole epoch.
 \begin{align}
-  \pi_C &\in \seq{\tuple{
+  \corestats &\in \seq{\tuple{
     \begin{alignedat}{7}
       \isa{d&}{\N}\,,\;  % da_load: u32
       \isa{&p&}{\N}\,,\;  % popularity: u16
@@ -77,7 +77,7 @@ The other two components of statistics are the core and service activity statist
       \isa{&u&}{\gas}% gas used
     \end{alignedat}
   }}_\corecount\\
-  \pi_S &\in \dict{\N_S}{\tuple{
+  \servicestats &\in \dict{\serviceid}{\tuple{
     \begin{alignedat}{3}
       \isa{p&}{(\N, \N)}\,,\;  % provided_count: u16; provided_size: u32
       \isa{&r&}{(\N, \gas)}\,,\;\\% refinement_count: u32; refinement_gas_used: UnsignedGas
@@ -93,7 +93,7 @@ The other two components of statistics are the core and service activity statist
 
 The core statistics are updated using several intermediate values from across the overall state-transition function; $\mathbf{w}$, the incoming work-reports, as defined in \ref{eq:incomingworkreports} and $\mathbf{W}$, the newly available work-reports, as defined in \ref{eq:availableworkreports}. We define the statistics as follows:
 \begin{align}
-  \forall c \in \coreindex : \pi'_C[c] &\equiv \tup{
+  \forall c \in \coreindex : \corestats'[c] &\equiv \tup{
     \begin{alignedat}{5}
       \is{i&}{R(c)_i}\,,\;
       \is{&x&}{R(c)_x}\,,\;
@@ -113,7 +113,7 @@ The core statistics are updated using several intermediate values from across th
 
 Finally, the service statistics are updated using the same intermediate values as the core statistics, but with a different set of calculations:
 \begin{align}
-  \forall s \in \mathbf{s} : \pi'_S[s] &\equiv \tup{
+  \forall s \in \mathbf{s} : \servicestats'[s] &\equiv \tup{
     \begin{alignedat}{5}
       \is{i&}{R(s)_i}\,,\;
       \is{&x&}{R(s)_x}\,,\;
@@ -125,10 +125,10 @@ Finally, the service statistics are updated using the same intermediate values a
       \is{t&}{\span\span \subifnone(\mathbf{X}[s], \tup{0, 0})} \quad\\
     \end{alignedat}
   }\!\!\!\!\\
-  \where \mathbf{s} &= \mathbf{r} \cup \mathbf{p} \cup \keys{\mathbf{I}} \cup \keys{\mathbf{X}}\\
+  \where \mathbf{s} &= \mathbf{r} \cup \mathbf{p} \cup \Fkeys{\mathbf{I}} \cup \Fkeys{\mathbf{X}}\\
   \also \mathbf{r} &= \{r_s \mid r \in w_\mathbf{r}, w \in \mathbf{w} \}\\
   \also \mathbf{p} &= \{s \mid \exists x: \tup{s, x} \in \mathbf{E}_P \}\\
-  \also R(s \in \N_S) &\equiv \!\!\!\!\!\!\!\!\!\!\!
+  \also R(s \in \serviceid) &\equiv \!\!\!\!\!\!\!\!\!\!\!
     \sum_{r \in w_\mathbf{r}, w \in \mathbf{w}, r_s = s}\!\!\!\!\!\!\!\!\!\!\!
     \tup{\is{n}{1}, r_u, r_i, r_x, r_z, r_e}
 \end{align}
